--- a/vggnet.ipynb
+++ b/vggnet.ipynb
@@ -14,7 +14,10 @@
     "from torch.utils.data import DataLoader\n",
     "import torchvision.transforms as transforms\n",
     "import torch.optim as optim\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "from torch.utils.data.dataloader import default_collate\n"
    ]
   },
   {
@@ -33,8 +36,9 @@
     "        self.model.features[0] = nn.Conv2d(1, 64, kernel_size=3, stride=1, padding=1, bias=False)\n",
     "        # Similarly, change final output nodes to 10, according to fashion-mnist's class\n",
     "        self.model.classifier[6] = nn.Linear(4096, 10)\n",
+    "\n",
     "    def forward(self, x):\n",
-    "        return self.model(x)"
+    "        return self.model(x)\n"
    ]
   },
   {
@@ -45,8 +49,11 @@
    "source": [
     "model = VGGNet()\n",
     "\n",
-    "if torch.cuda.is_available():\n",
-    "    model.cuda()"
+    "device = 'mps' if torch.backends.mps.is_available() else 'cpu'\n",
+    "# if torch.cuda.is_available():\n",
+    "#     model.cuda()\n",
+    "\n",
+    "print(device)\n"
    ]
   },
   {
@@ -55,7 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model"
+    "\n",
+    "model.to(device)\n"
    ]
   },
   {
@@ -67,11 +75,11 @@
     "# Get data loader Function referenced from hw4, loader.py\n",
     "# Download Fashion MNIST dataset, apply transforms, fit data into dataloader\n",
     "def get_data_loader(train_transformer, valid_transformer, batch_size):\n",
-    "    train_loader = DataLoader(torchvision.datasets.FashionMNIST(download=True, root=\".\", transform=train_transformer, train=True),\n",
-    "                              batch_size=batch_size, shuffle=True)\n",
+    "    train_loader = DataLoader(torchvision.datasets.FashionMNIST(\n",
+    "        download=True, root=\".\", transform=train_transformer, train=True), batch_size=batch_size, shuffle=True, pin_memory=True)\n",
     "\n",
-    "    val_loader = DataLoader(torchvision.datasets.FashionMNIST(download=False, root=\".\", transform=valid_transformer, train=False),\n",
-    "                            batch_size=batch_size, shuffle=False)\n",
+    "    val_loader = DataLoader(torchvision.datasets.FashionMNIST(download=False, root=\".\",\n",
+    "                            transform=valid_transformer, train=False), batch_size=batch_size, shuffle=False, pin_memory=True)\n",
     "    return train_loader, val_loader\n"
    ]
   },
@@ -85,12 +93,12 @@
     "batch_size = 32\n",
     "\n",
     "data_transform = transforms.Compose([\n",
-    "                                     transforms.Resize((224, 224)),\n",
-    "                                     transforms.ToTensor(),\n",
-    "                                     transforms.RandomHorizontalFlip(0.5),\n",
-    "                                     transforms.RandomAffine((-5, 5), shear=(-10, 10)),\n",
-    "                                     transforms.Normalize([0.5], [0.5])])\n",
-    "train_loader, val_loader = get_data_loader(data_transform, data_transform, batch_size)"
+    "    transforms.Resize((224, 224)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.RandomCrop(224),\n",
+    "    transforms.RandomHorizontalFlip(p=0.3),\n",
+    "    transforms.Normalize([0.5], [0.5])])\n",
+    "train_loader, val_loader = get_data_loader(data_transform, data_transform, batch_size)\n"
    ]
   },
   {
@@ -104,7 +112,7 @@
     "train_losses = []\n",
     "valid_losses = []\n",
     "train_accs = []\n",
-    "valid_accs = []"
+    "valid_accs = []\n"
    ]
   },
   {
@@ -116,7 +124,7 @@
     "# Run function referenced from hw4, helper.py\n",
     "# Perform forward propagation\n",
     "# If mode is training, also perform backward propagation and optimize parameters\n",
-    "def run(mode, dataloader, model, optimizer=None, use_cuda = torch.cuda.is_available()):\n",
+    "def run(mode, dataloader, model, optimizer=None, use_cuda=torch.cuda.is_available(), device=None):\n",
     "    \"\"\"\n",
     "    mode: either \"train\" or \"valid\". If the mode is train, we will optimize the model\n",
     "    \"\"\"\n",
@@ -128,6 +136,9 @@
     "    for inputs, labels in tqdm.tqdm(dataloader):\n",
     "        if use_cuda:\n",
     "            inputs, labels = inputs.cuda(), labels.cuda()\n",
+    "\n",
+    "        if device == 'mps':\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
     "\n",
     "        # forward + backward + optimize\n",
     "        outputs = model(inputs)\n",
@@ -151,7 +162,7 @@
     "\n",
     "    loss = np.mean(running_loss)\n",
     "\n",
-    "    return loss, acc"
+    "    return loss, acc\n"
    ]
   },
   {
@@ -161,36 +172,49 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "# Perform the actual training and validating process for each epoch\n",
     "for epoch in range(epochs):\n",
-    "    loss, acc = run(\"train\", train_loader, model, optimizer)\n",
+    "    loss, acc = run(\"train\", train_loader, model, optimizer, device=device)\n",
     "    train_losses.append(loss)\n",
     "    train_accs.append(acc)\n",
     "    with torch.no_grad():\n",
-    "        loss, acc = run(\"valid\", val_loader, model, optimizer)\n",
+    "        loss, acc = run(\"valid\", val_loader, model, optimizer, device=device)\n",
     "        valid_losses.append(loss)\n",
     "        valid_accs.append(acc)\n",
     "\n",
     "print(\"-\"*60)\n",
-    "print(\"best validation accuracy is %.4f percent\" % (np.max(valid_accs) * 100) )\n",
+    "print(\"best validation accuracy is %.4f percent\" % (np.max(valid_accs) * 100))\n",
     "\n",
     "# save the model for future reference\n",
-    "torch.save(model, \"%s.pt\" % str(valid_accs[-1]))"
+    "torch.save(model, \"%s.pt\" % str(valid_accs[-1]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('env': venv)",
+   "display_name": "ee562-proj",
    "language": "python",
-   "name": "python3"
+   "name": "ee562-proj"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4 (default, Aug 10 2022, 20:01:38) \n[Clang 13.1.6 (clang-1316.0.21.2.5)]"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "57836b4af503e995b4b678377aaa1181a74a14262648efe15edf7d566179e0ab"
