--- a/vggnet.ipynb
+++ b/vggnet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
-    "from torch.utils.data.dataloader import default_collate\n"
+    "from torch.utils.data.dataloader import default_collate\n",
+    "from torchsummary import summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,14 +116,81 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "model.to(device)\n"
+    "# model.to(device)\n",
+    "model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1         [-1, 64, 224, 224]             576\n",
+      "              ReLU-2         [-1, 64, 224, 224]               0\n",
+      "            Conv2d-3         [-1, 64, 224, 224]          36,928\n",
+      "              ReLU-4         [-1, 64, 224, 224]               0\n",
+      "         MaxPool2d-5         [-1, 64, 112, 112]               0\n",
+      "            Conv2d-6        [-1, 128, 112, 112]          73,856\n",
+      "              ReLU-7        [-1, 128, 112, 112]               0\n",
+      "            Conv2d-8        [-1, 128, 112, 112]         147,584\n",
+      "              ReLU-9        [-1, 128, 112, 112]               0\n",
+      "        MaxPool2d-10          [-1, 128, 56, 56]               0\n",
+      "           Conv2d-11          [-1, 256, 56, 56]         295,168\n",
+      "             ReLU-12          [-1, 256, 56, 56]               0\n",
+      "           Conv2d-13          [-1, 256, 56, 56]         590,080\n",
+      "             ReLU-14          [-1, 256, 56, 56]               0\n",
+      "        MaxPool2d-15          [-1, 256, 28, 28]               0\n",
+      "           Conv2d-16          [-1, 512, 28, 28]       1,180,160\n",
+      "             ReLU-17          [-1, 512, 28, 28]               0\n",
+      "           Conv2d-18          [-1, 512, 28, 28]       2,359,808\n",
+      "             ReLU-19          [-1, 512, 28, 28]               0\n",
+      "        MaxPool2d-20          [-1, 512, 14, 14]               0\n",
+      "           Conv2d-21          [-1, 512, 14, 14]       2,359,808\n",
+      "             ReLU-22          [-1, 512, 14, 14]               0\n",
+      "           Conv2d-23          [-1, 512, 14, 14]       2,359,808\n",
+      "             ReLU-24          [-1, 512, 14, 14]               0\n",
+      "        MaxPool2d-25            [-1, 512, 7, 7]               0\n",
+      "AdaptiveAvgPool2d-26            [-1, 512, 7, 7]               0\n",
+      "           Linear-27                 [-1, 4096]     102,764,544\n",
+      "             ReLU-28                 [-1, 4096]               0\n",
+      "          Dropout-29                 [-1, 4096]               0\n",
+      "           Linear-30                 [-1, 4096]      16,781,312\n",
+      "             ReLU-31                 [-1, 4096]               0\n",
+      "          Dropout-32                 [-1, 4096]               0\n",
+      "           Linear-33                   [-1, 10]          40,970\n",
+      "              VGG-34                   [-1, 10]               0\n",
+      "================================================================\n",
+      "Total params: 128,990,602\n",
+      "Trainable params: 128,990,602\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.19\n",
+      "Forward/backward pass size (MB): 198.87\n",
+      "Params size (MB): 492.06\n",
+      "Estimated Total Size (MB): 691.12\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "summary(model, (1, 224, 224))\n",
+    "\n"
    ]
   },
   {
