--- a/vggnet.ipynb
+++ b/vggnet.ipynb
@@ -483,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.4 (default, Aug 10 2022, 20:01:38) \n[Clang 13.1.6 (clang-1316.0.21.2.5)]"
   },
   "vscode": {
    "interpreter": {
